@@ -1,4 +1,8 @@
+AUX FoxitReader.txt 1861 RMD160 93a9684e1f6bc9e526cf337619420d5b3ca12b98 SHA1 bdca83c4d8dd190e228d0551d7fdcffcbaf987e2 SHA256 e680c5b6acd3701f1c77f828ebca30b2f5b3e6ec16692f3a4d0cc05588fa407e
+AUX foxitreader.desktop 185 RMD160 210fb371dc209e906b57d65a8cb214df5040b1b3 SHA1 57aace7a2536f1df68b97fef28337ccc08b80b12 SHA256 7cb66bdd6649b1868f5ff0da37c9ab84e76873bc0efef1f63bb88d148e93f88b
+AUX foxitreader.png 3391 RMD160 05a3caf9dbfc618559bfbdb9a831e99a13cf809e SHA1 cf50583b21333dbbe0ad643dac58447e3046f736 SHA256 2ccd1ddd301aaee911afa585646c845b6a6ddef13e13275e62589e6367f97efe
 DIST FoxitReader-1.1.0.tar.bz2 3787587 RMD160 bce49dcc467fc8060d4bb213cfeb3a064ccf64f1 SHA1 7de9de0886c9196d93e6c51efe81681163d5038a SHA256 02f1ad5ad2fd516754254f349c94b8e81b57b9eb2a0315f30debdc5d7fb8dbf4
+EBUILD foxitreader-1.1.0-r1.ebuild 1645 RMD160 71aa2f6b1c24af8ec243cfc1c6e9060c3107c9c4 SHA1 9e303095b1ac54972df2f4d33fea5e2452ce60a5 SHA256 f7e874ad26b08c817b8b9bf83d12ba0f433a7f275cf8ffa3bfcdf7ca5979923e
 EBUILD foxitreader-1.1.0.ebuild 913 RMD160 caca1b8f4795c4eac4e33961594d4bc611e272cc SHA1 13f1e98132ecff23afce01843d8d18bf47064e25 SHA256 f262637d1503d424b471f48739b268c341089ccb77f2dce59da86408f1434cbd
-MISC ChangeLog 584 RMD160 d5e758f828b4fd4ef6fa0f693cc507a29dd75dcb SHA1 4019becbaf893972a7fe6356af648f1040d05dfa SHA256 540bb3e390dba1904ce5ad6d6032f5fc2bed62bcea0738410d637ff2bde7ef2d
+MISC ChangeLog 770 RMD160 87fb4f6cd6b8cdc723fb151fc28258d1230a46f8 SHA1 2ca02d5c7696cba85f9f2fbbdd136ed027b82285 SHA256 d161951f090f8b3a95d197690c4645e092d33ef344cd1764599143efe24e03c8
 MISC metadata.xml 530 RMD160 fa7605a7a9979af2af49db7c9f5be55b65140c73 SHA1 1e3430b5461456dac65f03d52473693273e5e48e SHA256 ad5d16c0ecb82f503d99ba30135e44b0fc925bbc46d3632851f8103935051f43
